--- a/app/assets/src/components/views/compare/SamplesHeatmapView/samples_heatmap_view.scss
+++ b/app/assets/src/components/views/compare/SamplesHeatmapView/samples_heatmap_view.scss
@@ -155,8 +155,3 @@
 .iconAlert {
   width: $icon-l;
 }
-
-.originalFilters {
-  position: relative;
-  z-index: 0;
-}
